# Karna

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.yaml  docker-compose.yml  install.sh  instructions.example.md  karna
.github/workflows/: ci.yml  migrate.yml
agent/: Cargo.toml  Dockerfile
agent/src/: cli.rs  config.rs  main.rs  models.rs  onboarding.rs  queue.rs  scheduler.rs  updater.rs
agent/src/agent/: implementer.rs  mod.rs  planner.rs
agent/src/api/: mod.rs
agent/src/claude/: mod.rs
agent/src/codex/: mod.rs
agent/src/db/: mod.rs
agent/src/git/: github.rs  mod.rs  workspace.rs
agent/src/notifications/: mod.rs
agent/templates/: implement_prompt.txt  onboard_prompt.txt  plan_prompt.txt  schedule_prompt.txt
api/: Cargo.toml  Dockerfile
api/src/: auth.rs  config.rs  main.rs
api/src/routes/: config.rs  mod.rs  repos.rs  schedules.rs  tasks.rs  webhooks.rs
charts/karna/: Chart.yaml  values.production.yaml  values.yaml
charts/karna/templates/: NOTES.txt  _helpers.tpl  configmap-migrations.yaml  configmap-skills.yaml  configmap.yaml  ingress.yaml  migration-job.yaml  pdb.yaml  secret.yaml  serviceaccount.yaml
code-server/: Dockerfile  setup.sh
frontend/: Dockerfile  auth.config.ts  auth.ts  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  home.tsx  layout.tsx  page.tsx  providers.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/login/: login-form.tsx  page.tsx
frontend/components/agent/: add-repo-dialog.tsx  agent-column.tsx  create-schedule-dialog.tsx  create-task-dialog.tsx  dashboard-shell.tsx  markdown-content.tsx  markdown-editor.tsx  repo-card.tsx  repo-detail-modal.tsx  repos-page.tsx  schedule-card.tsx  schedule-detail-modal.tsx  (+4 more)
frontend/hooks/: use-attachments.ts  use-repos.ts  use-schedules.ts  use-tasks.ts
frontend/lib/: agent-tasks.ts  api-auth.ts  auth-context.tsx  db.ts  repos.ts  schedules.ts
migrations/: 005_task_number.sql  009_schedules.sql  011_cancelled_status.sql  012_task_attachments.sql
shared/: Cargo.toml
shared/src/: db.rs  models.rs
skills/: add-repo.md  build.md  commit.md  typecheck.md
tunnel/: Dockerfile  entrypoint.sh
(+52 files in other folders)
