[package]
name = "karna-api"
version = "0.1.0"
edition = "2021"

[dependencies]
karna-shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22"
anyhow = "1"
dotenvy = "0.15"
indexmap = { version = "2", features = ["serde"] }
regex-lite = "0.1"
urlencoding = "2"
